k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyx-service
spec:
  selector:
    app: nyx-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
  type: LoadBalancer
