k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nyx-service
  namespace: nyx-production
spec:
  selector:
    app: nyx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
